--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-//AGREGAR UN RESET CSS
+//AGREGAR UN RESET CSS?
 
 html,
 body {
