--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding: 15px 15px;
+  padding: 0px 15px; //
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 .h1 {
