--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -9,7 +9,7 @@
   min-height: 50vh;
   text-align: center;
   margin-top: 10px;
-  overflow-y: auto;
+  //overflow-y: auto;
   //max-height: 500px;
 }
 
@@ -57,6 +57,8 @@ button img {
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  height: 75vh;
+  overflow-y: auto;
 }
 
 .button-content {
