--- a/src/app/pages/signin/signin.component.scss
+++ b/src/app/pages/signin/signin.component.scss
@@ -1,27 +1,35 @@
-//prueba
-
 @use "../../../assets/styles/variables.scss";
-//@use "../../../assets/styles/styles-c.scss";
+
 .signin {
-  max-width: 400px;
+  max-width: 500px;
   margin: 6px auto;
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  //display: flex;
-  //align-items: center;
-  //justify-content: center;
-  //flex-direction: column;
+  margin-top: 20px;
+  height: vh;
 }
+.form-row {
+  //new
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-group {
+  //new
+  width: calc(50% - 12px);
+  box-sizing: border-box;
+}
+
 #registrate {
   font-family: "Roboto", sans-serif;
   text-align: center;
   color: rgb(0, 0, 0);
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .label {
   display: block;
@@ -35,7 +43,7 @@
   padding: 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   box-sizing: border-box;
 }
 
@@ -48,7 +56,7 @@
 
 .error {
   color: #d9534f;
-  font-size: 14px;
+  font-size: 10px;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -63,6 +71,9 @@
   cursor: pointer;
   background-color: variables.$color-principal;
   color: #fff;
+  display: block;
+  margin: 20px auto 0;
+  //margin-top: 10px;
 }
 
 .button:hover {
@@ -76,57 +87,3 @@
 .button:focus {
   outline: none;
 }
-
-/*.container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-label {
-  display: block;
-  font-weight: bold;
-}
-
-input[type="email"],
-input[type="password"] {
-  width: 100%;
-  padding: 5px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-}
-
-button {
-  margin-top: 10px;
-  margin-right: 10px;
-  padding: 8px 16px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-button:active {
-  background-color: #004286;
-}
-
-button:focus {
-  outline: none;
-}
-*/
