--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,5 +1,5 @@
 @use "../../../assets/styles/variables.scss";
-@use "../../../assets/styles/styles-c.scss";
+//@use "../../../assets/styles/styles-c.scss";
 
 #page-container {
   display: flex;
